src/test/ui/pattern/static-in-pattern-repeat.stderr
error: unreachable pattern
  --> $DIR/static-in-pattern-repeat.rs:11:9
   |
LL |         ZERO => true,
   |         ^^^^
   |
note: the lint level is defined here
  --> $DIR/static-in-pattern-repeat.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/static-in-pattern-repeat.rs:18:9
   |
LL |         ZERO_REF => false,
   |         ^^^^^^^^

error: aborting due to 2 previous errors

